# memlink

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  ROADMAP.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  format_request.md
.github/workflows/: docs.yml  release.yml  test.yml
DESIGN/: index.html
IMPLEMENTATION/: index.html
api/plugin/: index.html
docs/: DESIGN.md  IMPLEMENTATION.md  index.md
docs/api/: plugin.md
docs/formats/: chatgpt.md  claude_export.md  generic.md  mem0.md  ombre.md  openclaw.md  zep.md
docs/guide/: quickstart.md
formats/chatgpt/: index.html
formats/claude_export/: index.html
formats/generic/: index.html
formats/mem0/: index.html
formats/ombre/: index.html
formats/openclaw/: index.html
formats/zep/: index.html
guide/quickstart/: index.html
python/memlink/: __init__.py  _frontmatter.py  chatgpt_reader.py  claude_export_reader.py  cli.py  converter.py  generic_reader.py  generic_writer.py  mem0_reader.py  mem0_writer.py  models.py  ombre_reader.py  ombre_writer.py  openclaw_reader.py  openclaw_writer.py  plugin.py  registry.py  serialization.py  stream_summary_reader.py  testing.py  validators.py  zep_reader.py  zep_writer.py
search/: search_index.json
spec/: README.md  canonical-v1.md  canonical-v1.schema.json  source-uri.md
tests/: test_chatgpt_reader.py  test_claude_export_reader.py  test_cli_broadcast.py  test_cli_fail_on_loss.py  test_cli_merge.py  test_fuzz.py  test_generic_reader.py  test_generic_writer.py  test_mem0_reader.py  test_mem0_writer.py  test_models.py  test_ombre_reader.py  test_ombre_writer.py  test_openclaw_reader.py  test_openclaw_writer.py  test_plugin.py  test_registry_discovery.py  test_schema.py  test_serialization.py  test_stream_summary_reader.py  test_validators.py  test_zep_reader.py  test_zep_writer.py
tests/fixtures/chatgpt_samples/: conversations.json
tests/fixtures/claude_export_samples/: conversations.json
tests/fixtures/mem0_samples/: array_format.json  memories.json
tests/fixtures/mem0_samples/broken/: invalid.json  partial_invalid.json
tests/fixtures/ombre_samples/broken/: invalid-yaml.md  no-id.md
tests/fixtures/ombre_samples/dynamic/user/: minimal.md  sample.md
tests/fixtures/ombre_samples/feel/: sample.md
tests/fixtures/ombre_samples/permanent/docs/: manual.md
tests/fixtures/openclaw_samples/: MEMORY.md
tests/fixtures/openclaw_samples/memory/: test-memory.md
tests/fixtures/openclaw_samples/memory/feels/: test-feel.md
tests/fixtures/test_edge_cases/broken/: bad.md
tests/fixtures/test_edge_cases/duplicate/: a.md  b.md
tests/fixtures/test_edge_cases/empty_body/: test.md
tests/fixtures/zep_samples/: array_format.json  facts.json  session_format.json
tests/fixtures/zep_samples/broken/: partial_invalid.json
