[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memlink-bridge"
version = "0.1.0"
description = "AI Memory Interchange Layer — language-neutral bridge for AI memory systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "memlink contributors"},
]
keywords = ["ai", "memory", "interchange", "canonical", "bridge", "pandoc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/velnori/memlink"
Repository = "https://github.com/velnori/memlink"
Issues = "https://github.com/velnori/memlink/issues"

[project.scripts]
memlink = "memlink.cli:main"

[project.entry-points."memlink.readers"]
ombre = "memlink.ombre_reader:OmbreReader"
openclaw = "memlink.openclaw_reader:OpenClawReader"
generic = "memlink.generic_reader:GenericReader"

[project.entry-points."memlink.writers"]
ombre = "memlink.ombre_writer:OmbreWriter"
openclaw = "memlink.openclaw_writer:OpenClawWriter"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1",
    "ruff>=0.6",
]
docs = [
    "mkdocs-material>=9",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["memlink"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["python"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: slow tests (fuzz, performance)",
]

[tool.coverage.run]
source = ["memlink"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.setuptools.packages.find]
where = ["python"]
